--- a/src/Configuration.conf
+++ b/src/Configuration.conf
@@ -1,11 +1,13 @@
-url=jdbc:postgresql://192.168.7.249:5432/riams
+url=jdbc:postgresql://192.168.10.2:5432/riams
 name=postgres
 password=null
-ip=http://192.168.4.151
+ip=http://192.168.2.45
 port=1986
 OgrnMO=1023000836099
-CertAliasMO=test_mo_2
-CertPasswordMO=123456
+KeyAliasMO=test_mo_2
+KeyPasswordMO=123456
 PathToSSLcert=C:\\Program Files (x86)\\Java\jdk1.7.0_21\\jre\lib\\security\\cacerts1
 PathToSave=C:\\123\\
 PathToCertStor=C:\\Storage\\Stor
+CertAlias=FSS.cer
+CertPassword=123456
