--- a/src/Configuration.conf
+++ b/src/Configuration.conf
@@ -9,5 +9,5 @@ KeyPasswordMO=123456
 PathToSSLcert=C:\\Program Files (x86)\\Java\jdk1.7.0_21\\jre\lib\\security\\cacerts1
 PathToSave=C:\\123\\
 PathToCertStor=C:\\Storage\\Stor
-CertAlias=FSS.cer
+CertAlias=fss_prod_cert.cer
 CertPassword=123456
